# cprojects

./: .gitmodules  README.md  build_common.bat  build_common.sh
01/: CMakeLists.txt  build.bat
common/: CMakeLists.txt
common/include/: test.h
common/src/: test.c
project01/: CMakeLists.txt  test.bat
project01/include/: calc.h  file.h
project01/src/: calc.c  file.c
project01/test/: unittest.c
project02/test/: unittest.c
project04/: unittest.sh
